# Sugar-Diabetes_Research

./: README.md  Research_Project_Hashchuk_Chaliuk.Rmd
Algotester/: 2v3. Lab 2v3 | NULP_LABS_S1_PUBLIC | Алготестер.html  5v3. Lab 5v3 | NULP_LABS_S1_PUBLIC | Алготестер.html  6v3. Lab 6v3 | NULP_LABS_S1_PUBLIC | Алготестер.html  A-14. Марсостриб | Algo-2023-NULP-Lab3 | Алготестер.html  A-4. Тренер слонів | Умови | Алготестер.html  B-1. Рецепт | Умови | Алготестер.html  B-6. Веселі каруселі | Умови | Алготестер.html  B-7. Вітряк | Умови | Алготестер.html  P1 (1). Депутатські гроші | NULP_PRACTICE_S1 | Алготестер.html  P2 (2). Курфюрста жахів | NULP_PRACTICE_S1 | Алготестер.html  P4 (5). Числа для малят | NULP_PRACTICE_S1 | Алготестер.html  P4 (7). Зеник і рядок | NULP_PRACTICE_S1 | Алготестер.html  Wind_Blow.cpp  bag_mood.cpp  (+17 more)
Algotester/tasks/: 1v3. Lab 1v3 | NULP_LABS_S1_PUBLIC | Алготестер.html  3v3. Lab 3v3 | NULP_LABS_S1_PUBLIC | Алготестер.html  4v3. Lab 4v3 | NULP_LABS_S1_PUBLIC | Алготестер.html  78v3. Lab 78v3 | NULP_LABS_S1_PUBLIC | Алготестер.html  A-0. Свічки на Halloween | Умови | Алготестер.html  A-1. Робот | Умови | Алготестер.html  A-10. Драган та пошук скарбів | Algo-2023-NULP-Lab5 | Алготестер.html  B-2. Чемоданний настрій | Algo-2023-NULP-Lab4 | Алготестер.html  B. Мірана і Стріли | Умови | Алготестер.html  C. Підводне полювання | Умови | Алготестер.html  CMakeLists.txt  P3 (1). Допоможе чи заб'є? | NULP_PRACTICE_S1 | Алготестер.html  P4 (2). Непарний масив | NULP_PRACTICE_S1 | Алготестер.html  P6 (3). Колобок | NULP_PRACTICE_S1 | Алготестер.html
(+34 files in other folders)
