cmake_minimum_required(VERSION 3.27)
project(Algotester)

set(CMAKE_CXX_STANDARD 17)

add_executable(Algotester main.cpp
        mirana.cpp
        dragan.cpp
        bag_mood.cpp
        mars_jump.cpp
        candles_for_halloween.cpp
        elephant_trainer.cpp
        Wind_Blow.cpp
        happy_carousel.cpp
        recipy.cpp
        robot.cpp
        lab6_3.cpp
        lab78.cpp
        simplest_task.cpp
        zenyk_row.cpp
        kolobok.cpp
        min_shout.cpp
        sudoku_maker.cpp
        dzidzio_meet_fan.cpp
        odd_array.cpp
        lab1.cpp
        lab2.cpp
        lab3.cpp
        lab4.cpp
        lab5.cpp
        deputat_money.cpp
        kufrusta_nightmares.cpp
        help_or_kill.cpp
        road_cross.cpp
        nums_for_childer.cpp)
